# micropsi-task

./: README.md  setup.cfg
minimum_binary_search/: minimum_binary_search.py
tests/unit/: test_min_bs.py
