[metadata]
name = minimum-binary-search
version = 0.1
description = Usage of binary seach to obtain the minimum element in an array assuming it follows the format of strictly decreasing then strictly increasing
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
setup_requires =
    setuptools
    wheel
python_requires = >=3.6